[ADD][FE] Add chat bot
